# PaperBase

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
paperbase/: main.py
paperbase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paperbase/core/: categoriser.py  db.py  downloader.py  importer.py  indexer.py  llm.py  metadata.py  organiser.py  scraper.py
paperbase/models/: collection.py  paper.py  search_result.py
paperbase/ui/: categorisation_dialog.py  collection_tree.py  import_dialog.py  main_window.py  paper_detail.py  search_panel.py  settings_dialog.py  theme.py
tasks/: todo.md
